Youtube playlist layout using JS

--- a/YoutubePlaylistdemo.css
+++ b/YoutubePlaylistdemo.css
@@ -1,17 +1,23 @@
+body{
+    background-color:  rgb(245, 243, 243);
+    
+}
 .card 
 {
-    border-radius: 13px;
+    
     background-color: rgb(238, 238, 238);
     width: 1000px;
     display: flex;
     gap: 22px;
     padding: 7px;
     height: 100px;
+    cursor: pointer;
+
 }
 
 .card:hover 
 {
-    background-color: rgb(175, 174, 174);
+    background-color: rgb(209, 209, 209);
 }
 
 .card img 
@@ -19,19 +25,24 @@
     width: 177px;
     border-radius: 13px;
 }
+.thumbnail{
+       position: relative;
+}
 
 .text h1 
 {
     margin: 0px;
+    font-size:22px
 }
 
 .timestamp {
     border-radius: 3px;
     background-color: rgba(0, 0, 0, 0.562);
-    width: 37px;
+    width: 31px;
     padding: 2px;
-    position: relative;
-    left: 130px;
-    bottom: 29px;
+    position: absolute;
+    left: 136px;
+    font-size: 14px;
+    bottom: 0px;
     color: white;
 }
